# kd

./: .gitignore  .gitmodules  README.md  build.gradle.kts  gradle.properties  renovate.json  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
jni/: opus_encoder.cpp  wdl_fft.cpp  wdl_resample.cpp  wdl_simple_pitchshift.cpp  wdl_sinewavegen.cpp
kd/: build.gradle.kts
kd-android-native/: build.gradle.kts
kd-android-native/src/main/cpp/: CMakeLists.txt
kd-sample/: build.gradle.kts
kd-sample-android/: build.gradle.kts
kd-sample-android/src/androidTest/java/com/niusounds/myapplication/: ExampleInstrumentedTest.kt
kd-sample-android/src/main/: AndroidManifest.xml
kd-sample-android/src/main/java/com/niusounds/myapplication/: MainActivity.kt
kd-sample-android/src/test/java/com/niusounds/myapplication/: ExampleUnitTest.kt
kd-sample-jvm/: build.gradle.kts
kd-sample-jvm/src/main/java/com/niusounds/kd_sample/: ChannelSplitSample.kt  GainNodeSample.kt  GuiSample.kt  OpusOutputSample.kt  OscillatorSample.kt  ReaStreamSample.kt  SimplePassthroughSample.kt  SplitSample.kt
kd/src/androidMain/: CMakeLists.txt
kd/src/androidMain/kotlin/com/niusounds/kd/node/: AudioInput.kt  AudioOutput.kt  SimplePitchShifterNode.kt
kd/src/androidMain/kotlin/com/niusounds/kd/util/: Jni.android.kt
kd/src/androidTest/java/com/niusounds/kd/: ExampleInstrumentedTest.kt
kd/src/commonMain/kotlin/com/niusounds/kd/: Kd.kt
kd/src/jvmMain/: CMakeLists.txt
(+40 files in other folders)
